vlib/v/checker/tests/mul_op_wrong_right_type_err_a.out
vlib/v/checker/tests/mul_op_wrong_right_type_err_a.v:3:10: error: mismatched types `any_int` and `Aaa`
    1 | struct Aaa{}
    2 | fn main() {
    3 |     10 * Aaa{}
      |          ~~~~~
    4 | }
