vlib/v/checker/tests/mul_op_wrong_right_type_err_a.vv
struct Aaa{}
fn main() {
    10 * Aaa{}
}
